--- a/UDP_FlaskApp/.env
+++ b/UDP_FlaskApp/.env
@@ -1,4 +1,7 @@
 MYSQL_HOST=localhost
 MYSQL_USER=root
-MYSQL_PASSWORD=root
-MYSQL_DATABASE=aws
+MYSQL_PASSWORD=""
+MYSQL_DATABASE=MYSQL_DATABASE
+
+PUBNUB_PUBLISH_KEY=pub-c-5674b519-0550-444b-90f1-08857dda1e5c
+PUBNUB_SUBSCRIBE_KEY=sub-c-cc8d214f-cbe7-437d-b846-1887deb65591
