--- a/UDP_FlaskApp/.env
+++ b/UDP_FlaskApp/.env
@@ -1,7 +1,8 @@
-MYSQL_HOST=localhost
+MYSQL_HOST=ec2-51-21-134-92.eu-north-1.compute.amazonaws.com
 MYSQL_USER=root
-MYSQL_PASSWORD=""
-MYSQL_DATABASE=MYSQL_DATABASE
+MYSQL_PASSWORD="Aoifetara*"
+MYSQL_DATABASE= babysitter
 
 PUBNUB_PUBLISH_KEY=pub-c-5674b519-0550-444b-90f1-08857dda1e5c
 PUBNUB_SUBSCRIBE_KEY=sub-c-cc8d214f-cbe7-437d-b846-1887deb65591
+PUBNUB_NAME=babysitter
