moved Pubnub sec key into the .env

--- a/UDP_FlaskApp/.env
+++ b/UDP_FlaskApp/.env
@@ -6,6 +6,7 @@ MYSQL_DATABASE= babysitter
 PUBNUB_PUBLISH_KEY=pub-c-5674b519-0550-444b-90f1-08857dda1e5c
 PUBNUB_SUBSCRIBE_KEY=sub-c-cc8d214f-cbe7-437d-b846-1887deb65591
 PUBNUB_NAME=babysitter
+PUBNUB_SECRET=sec-c-YTMzYWYyYjctNmY0MS00NTE2LWE2OWMtMGU5NjYzYTg2Nzk3
 
 GOOGLE_CLIENT_SECRET=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
 GOOGLE_CLIENT_ID=627645867859-uf4qc17ccjd1nn1uh4s29ldqsavfsspd.apps.googleusercontent.com
