fixed sencers.py to record video and sound when a loud sound is dected and to send temp

--- a/UDP_FlaskApp/.env
+++ b/UDP_FlaskApp/.env
@@ -8,6 +8,7 @@ PUBNUB_SUBSCRIBE_KEY=sub-c-cc8d214f-cbe7-437d-b846-1887deb65591
 PUBNUB_NAME=babysitter
 PUBNUB_UUID=babysitter
 PUBNUB_SECRET_KEY=sec-c-YTMzYWYyYjctNmY0MS00NTE2LWE2OWMtMGU5NjYzYTg2Nzk3
+PUBNUB_SECRET=sec-c-YTMzYWYyYjctNmY0MS00NTE2LWE2OWMtMGU5NjYzYTg2Nzk3
 PUBNUB_CIPHER_KEY=Aoifetara02*
 
 GOOGLE_CLIENT_SECRET=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
